force-app/main/default/objects/LPCR_LignePlanFacturation__c/LPCR_LignePlanFacturation__c.object-meta.xml
<CustomObject>
    <label>Billing Plan Line</label>
    <nameField>
        <displayFormat>BPL-{0000}</displayFormat>
        <label>Billing Plan Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Plan Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>