force-app/main/default/objects/LPCR_LignePlanFacturation__c/fields/LPCR_Amount__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>