force-app/main/default/objects/LPCR_LignePlanFacturation__c/fields/LPCR_ChargeType_c__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ChargeType_c__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__ChargeType</valueSetName>
    </valueSet>
</CustomField>