force-app/main/default/objects/LPCR_LignePlanFacturation__c/fields/LPCR_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Billing Plan Lines</relationshipLabel>
    <relationshipName>Billing_Plan_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>