force-app/main/default/objects/LPCR_LignePlanFacturation__c/fields/LPCR_PlanFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PlanFacturation__c</fullName>
    <label>Billing Plan</label>
    <referenceTo>LPCR_PlanFacturation__c</referenceTo>
    <relationshipLabel>Billing Plan Lines</relationshipLabel>
    <relationshipName>Billing_Plan_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>