force-app/main/default/objects/LPCR_LignePlanFacturation__c/fields/LPCR_Quantity__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>